--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-icons": "^5.3.0",
+    "react-simple-typewriter": "^5.0.1",
+    "react-typed": "^2.0.12",
     "sharp": "^0.33.2",
     "sonner": "^1.4.3",
-    "three": "^0.162.0"
+    "three": "^0.162.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
