--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.3.0",
     "react-simple-typewriter": "^5.0.1",
